fix to sex to gender

--- a/index (1)-1.html
+++ b/index (1)-1.html
@@ -95,8 +95,8 @@
       <h2>Enter The Information</h2>
       Enter name <br />
       <input type="text" value="" id="name" />
-      Enter sex
-      <input type="text" value="" id="sex" />
+      Enter gender
+      <input type="text" value="" id="gender" />
       Enter date of birth <br />
       <input type="date" value="" id="birth" />
       Enter email <br />
