--- a/index (1)-1.html
+++ b/index (1)-1.html
@@ -9,9 +9,6 @@
   <link href='https://fonts.googleapis.com/css?family=Nova Flat' rel='stylesheet'>
 
   <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-
-
-
   <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
   <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
   <script src="index.js"></script>
@@ -21,15 +18,12 @@
 
 <body>
 
-
-
-
-  <!-- Start of  page ------------------------------------------------------------------>
+  <!-------------------------- Start of Home page ------------------------------------------------------------------>
   <div data-role="page" id="home">
 
     <!--   page header -->
     <div data-role="header" data-theme='a'>
-      <h1>Status of Bellevue (COVID-19)</h1>
+      <h1>Status of Bellevue Home (COVID-19)</h1>
       <div data-role="navbar" data-theme ="b">
         <ul>
           <li><a href="#home">Home Page</a></li>
@@ -39,28 +33,62 @@
           <li><a href="#Test">Testing in Bellevue</a></li>
         </ul>
       </div>
+    </br>
+      <div class="myHeader">Let's keep our community safe</div>
+    </br>
+      <img class ="center" id = 'image1' src="./images/bellevue.png" style="max-width: 100%; height: auto;" class ="center">
     </div>
-
-
-
 
     <!--   page content -->
     <div data-role="content" data-theme='b'>
       <div class="newFont">
         <h2> How to prevent from Corona19 </h2>
+        <p>
+          <ul>
+            <li>Wash your hands often. Use soap and hand sanitizer with water or alcohol.</li>
+          <li>Keep a safe distance from people who cough or sneeze.</li>
+          <li>Wear a mask when it is impossible to keep physical distance.</li>
+          <li>Don't touch your eyes, nose, or mouth.</li>
+          <li>Use toilet paper or bend your elbow to cover your nose and mouth when coughing or sneezing.</li>
+          <li>Take a rest at home if you are not feeling well.</li>
+          <li>If you have fever, cough, or difficulty breathing, you should consult a doctor.</li>
+          </ul>
+          
+        </p>
+
+
         <h2> Coronavirus Symptoms </h2>
+        <p>
+          Common symptoms include:
+          <ul>
+          <li>Fever</li>
+          <li>A dry cough</li>
+          <li>Feeling tired</li>
+          </ul>
+          In rare cases, the following symptoms may occur:
+          <ul>
+          <li>Body ache</li>
+          <li>Sore throat</li>
+          <li>Diarrhea</li>
+          <li>Conjunctivitis</li>
+          <li>Headache</li>
+          <li>Loss of taste or smell</li>
+          <li>Skin rash, finger or toe discoloration</li>
+          </ul>
+          Severe symptoms include:
+          <ul>
+          <li>Difficulty breathing or shortness of breath</li>
+          <li>Chest pain or pressure</li>
+          <li>Language or motor impairment</li>
+          </ul>
+        </p>
+
       </div>
       </div>
-    </div>
-
-
-
-
-
 
     <!--  page footer -->
     <div data-role="footer" data-theme='b'>
-      <h1>Copyrigtht 2020 by Kurt Friedrich</h1>
+      <h1>Team Project</h1>
     </div>
   </div>
   
@@ -70,7 +98,7 @@
 
 
 
-  <!-- Start of  page ------------------------------------------------------------------>
+  <!-- Start of Infor page ------------------------------------------------------------------>
 
 
   <div data-role="page" id="Infor">
@@ -94,7 +122,7 @@
     <div data-role="content" data-theme='c'>
       <h2>Enter The Information</h2>
       Enter name <br />
-      <input type="text" value="" id="name" />
+      <input type="text" value="" id="userName" />
       Enter gender
       <input type="text" value="" id="gender" />
       Enter date of birth <br />
@@ -104,7 +132,7 @@
 
         <div class="ui-field-contain">  <!-- Q. How it works? -->
           <label for="select-condition">Select Your Situation</label>
-          <select name="select-genre" id='select-genre'>
+          <select name="select-condition" id='select-condition'>
             <option value="General">General</option>
             <option value="Vaccination">Vaccination</option>
             <option value="Confirmed">Confirmed person</option>
@@ -114,26 +142,26 @@
 
 
       Check the following symptoms that you have experienced or experienced in the past 14 days.<br />
-      <input type="checkbox" id="Fever" name="Fever" value="Fever">
+      <input type="checkbox" id="Fever" name="symptoms" value="Fever">
       <label for="Fever"> Fever</label>
-      <input type="checkbox" id="Chills" name="Chills" value="Chills">
+      <input type="checkbox" id="Chills" name="symptoms" value="Chills">
       <label for="Chills"> Chills</label>
-      <input type="checkbox" id="Headache" name="Headache" value="Headache">
+      <input type="checkbox" id="Headache" name="symptoms" value="Headache">
       <label for="Headache"> Headache</label>
-      <input type="checkbox" id="Cough" name="Cough" value="Cough">
+      <input type="checkbox" id="Cough" name="symptoms" value="Cough">
       <label for="Cough"> Cough</label>
-      <input type="checkbox" id="breath" name="breath" value="breath">
+      <input type="checkbox" id="breath" name="symptoms" value="breath">
       <label for="breath"> Shortness of breath</label>
-      <input type="checkbox" id="pain" name="pain" value="pain">
+      <input type="checkbox" id="pain" name="symptoms" value="pain">
       <label for="pain"> Abdominal pain or Diarrhea</label>
 
 
       Travel Path <br />
-      <input type="text" value="If you're a confirmed or isolated person, please enter the route. (ex/ Bellevue College N building) " style="color:red">
+      <input type="text" id = 'pathText' value="If you're a confirmed or isolated person, please enter the route. (ex/ Bellevue College N building) " style="color:red">
 
-      <input type="date" /> 
-      <input type='time'>
-      <input type='time'>
+      <input type="date" id = 'pathDate'> 
+      <input type='time' id = 'pathtime1' >
+      <input type='time' id = 'pathtime2'>
 
 
       <input type="button" value="Add" id="buttonAdd" data-inline="true">
@@ -141,13 +169,13 @@
 
 
       Share any Information (It will be uploaded to the post.)<br />
-    <textarea name="comment" rows="10" cols="50">Exapmle
+    <textarea name="comment" id = "firstComment"rows="10" cols="50">Exapmle
     I am a 30-year-old woman. I had a fever five days ago, and when I tested the virus, it was confirmed positive. I haven't had a taste for 10 days since I got the virus.
     </textarea>
 
 
 
-      <input type="submit" value="submit">
+      <input type="submit" id = "submitButton" value="submit">
 
     </div>
 
@@ -155,7 +183,7 @@
 
     <!--   page footer -->
     <div data-role="footer" data-theme='b'>
-      <h1>Copyrigtht 2020 by Kurt Friedrich</h1>
+      <h1>Team Project</h1>
     </div>
   </div>
   <!-- End of  page ------------------------------------------------------------------>
@@ -180,18 +208,14 @@
     <div data-role="content" data-theme='e'>
       <h1> Shows location visited by confirmed or suspected person </h1>
       <h2>Location and Exposure Date</h2>
-      <p>
-        Example</br>
-        Bellevue Library, 2021.12.18 , AM 12:00 ~ PM 8:00
-      </p>
-      <div id="divMovieList"></div>
 
+      <div id="divPathList"></div>
     </div>
 
 
     <!--   page footer -->
     <div data-role="footer" data-theme='b'>
-      <h1>Copyrigtht 2020 by Kurt Friedrich</h1>
+      <h1>Team Project</h1>
     </div>
   </div>
   </div>
@@ -235,7 +259,7 @@ I am a 30-year-old woman. I had a fever five days ago, and when I tested the vir
 
     <!--   page footer -->
     <div data-role="footer" data-theme='b'>
-      <h1>Copyrigtht 2020 by Kurt Friedrich</h1>
+      <h1>Team Project</h1>
     </div>
   </div>
   </div>
@@ -273,7 +297,7 @@ I am a 30-year-old woman. I had a fever five days ago, and when I tested the vir
 
     <!--   page footer -->
     <div data-role="footer" data-theme='b'>
-      <h1>Copyrigtht 2020 by Kurt Friedrich</h1>
+      <h1>Team Project</h1>
     </div>
   </div>
   </div>
