--- a/index (1)-1.html
+++ b/index (1)-1.html
@@ -155,13 +155,13 @@
       <input type="checkbox" id="pain" name="symptoms" value="pain">
       <label for="pain"> Abdominal pain or Diarrhea</label>
 
-
+      <div id = path_list> 
       Travel Path <br />
-      <input type="text" id = 'pathText' value="If you're a confirmed or isolated person, please enter the route. (ex/ Bellevue College N building) " style="color:red">
-
-      <input type="date" id = 'pathDate'> 
-      <input type='time' id = 'pathtime1' >
-      <input type='time' id = 'pathtime2'>
+      <input type="text" name = 'path' value="Example: Bellevue College N building " style="color:red">
+      <input type="date" name = 'path'> 
+      <input type='time' name = 'path' >
+      <input type='time' name = 'path'>
+      </div>
 
 
       <input type="button" value="Add" id="buttonAdd" data-inline="true">
