only shows people's travel paths who are not general and have symptoms

--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
 
 
       Check the following symptoms that you have experienced or experienced in the past 14 days.<br />
-      <input type="checkbox" id="Fever" name="symptoms" value="Fever">
+      <input type="checkbox" id="Fever" name="symptoms" value=" Fever">
       <label for="Fever"> Fever</label>
-      <input type="checkbox" id="Chills" name="symptoms" value="Chills">
+      <input type="checkbox" id="Chills" name="symptoms" value=" Chills">
       <label for="Chills"> Chills</label>
-      <input type="checkbox" id="Headache" name="symptoms" value="Headache">
+      <input type="checkbox" id="Headache" name="symptoms" value=" Headache">
       <label for="Headache"> Headache</label>
-      <input type="checkbox" id="Cough" name="symptoms" value="Cough">
+      <input type="checkbox" id="Cough" name="symptoms" value=" Cough">
       <label for="Cough"> Cough</label>
-      <input type="checkbox" id="breath" name="symptoms" value="breath">
+      <input type="checkbox" id="breath" name="symptoms" value=" Breath">
       <label for="breath"> Shortness of breath</label>
-      <input type="checkbox" id="pain" name="symptoms" value="pain">
+      <input type="checkbox" id="pain" name="symptoms" value=" Pain">
       <label for="pain"> Abdominal pain or Diarrhea</label>
 
       <div id=path_list>
@@ -288,13 +288,12 @@
     <div data-role="content" data-theme='e'>
       <h1> Share information </h1>
       <div id="InformationList">
-        <ul id="sharedInfo">
+        <li id="sharedInfo">
           Example:
           I am a 30-year-old woman. I had a fever five days ago, and when I tested the virus, it was confirmed positive.
           I haven't had a taste for 10 days since I got the virus.
-        </ul>
+        </li>
       </div>
-
 
       <br />
       Share any Information<br />
