add more test center

--- a/index.html
+++ b/index.html
@@ -333,9 +333,23 @@
     <div data-role="content" data-theme='e'>
       <h1> Give test center Information </h1>
       <div id="Test">
-        Immediate Clinic - Bellevue Urgent Care,
-        15600 Ne 8th St Bellevue WA 98008,
-        (425) 643-3331
+        <ul>
+          <li>
+            Immediate Clinic - Bellevue Urgent Care,
+            15600 Ne 8th St Bellevue WA 98008,
+            (425) 643-3331
+          </li>
+          <li>
+            Kaiser Permanente - Bellevue Urgent Care,
+            11511 Ne 10th St Bellevue WA 98004
+            (425) 502-4120
+          </li>
+          <li>
+            Seattle Childrens Urgent Care Clinic in Bellevue,
+            1500 116th Ave Ne Bellevue WA 98004
+            (206) 987-2211
+          </li>
+          </ul>
       </div>
 
     </div>
